monticore-generator/src/test/resources/cocos/invalid/A4102/A4102c.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4102;

grammar A4102c {

  A = "a";

  astrule A =
    b:Optional<String>?;

}